tests/requests/invalid/005.py
from gunicorn import InvalidHeaderName

request = InvalidHeaderName
